# autodrive

./: .gitignore  GTSRB - German Traffic Sign Recognition Benchmark.ipynb  German Traffic Sign Recognition Benchmark.ipynb  README.md  hello.py  index.html  main.py  object_detection.ipynb  pyproject.toml
