[project]
name = "autodrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "albumentations>=2.0.8",
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "pycocotools>=2.0.10",
    "ray>=2.51.0",
    "timm>=1.0.21",
    "torchmetrics>=1.8.2",
    "transformers>=4.57.1",
    "ultralytics>=8.3.222",
]
